# fastapi-whatsapp-poster-api

./: main.py  populate.py  pyproject.toml
models/: gem_models.py
repos/: gem_repository.py
