[tool.poetry]
name = "fastapiproject3july"
version = "0.1.0"
description = ""
authors = ["keyj9 <kyrillos.joe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
sqlmodel = "^0.0.6"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
